# 7103C-DataMining-Project

./: .env.example  .gitignore  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt  run.bat  run.ps1  test_weather_api.py  user_info.json
src/: Main.py  config.py
src/agent/: PersonalAssistantAgent.py
src/service/: GoogleService.py  WeatherService.py
src/tools/: AgentTools.py  GoogleMapTools.py
