[project]
name = "7103c-datamining-project"
version = "0.1.0"
description = "Personal Assistant Agent with Google Services Integration"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.8",
    "langchain-core>=1.0.6",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "google-auth>=2.15.0,<2.42.0",
    "rich>=14.2.0",
    "python-dotenv>=1.2.1",
    "filetype>=1.2.0",
    "pydantic-settings>=2.12.0",
]
